[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipulate"
# VERSION NOTE: Synced from pipulate/__init__.py.__version__ via python version_sync.py
version = "1.0.1"
authors = [
  { name="Mike Levin", email="pipulate@gmail.com" },
]
description = "Pipulate: The Local-First Web Framework for AI-Assisted SEO and Automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["seo", "ai", "llm", "automation", "local-first", "nix", "fasthtml", "htmx", "agentic"]
dependencies = [
    "rich>=13.0"
]

[project.urls]
"Homepage" = "https://github.com/miklevin/pipulate"
"Bug Tracker" = "https://github.com/miklevin/pipulate/issues"
"Documentation" = "https://pipulate.com/guide/"

# This is the magic that creates the `pipulate` command
[project.scripts]
pipulate = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["plugins*", "static*", "logs*", "data*", "downloads*", "training*", "helpers*", ".venv*"]

[tool.setuptools.package-data]
pipulate = ["*.py", "install.sh", "flake.nix"]

[tool.vulture]
ignore_decorators = ["@rt", "@app.post"]
ignore_names = [
    "Pipeline", 
    "Profile", 
    "Task", 
    "finalize", 
    "finalize_submit",
    "home_route",
    "on_modified",
    "dispatch",
    "initialize_if_missing",
    "format_step_name",
    "fmt",
    "revert_control",
    "wrap_with_inline_button",
    "get_state_message",
    "clear_steps_from",
    ]
