[build-system]
requires = ["setuptools>=61.0", "build", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "pipulate"
# VERSION NOTE: Synced from pipulate/__init__.py.__version__ via python version_sync.py
version = "1.2.0"
authors = [
  { name="Mike Levin", email="pipulate@gmail.com" },
]
description = "Local First AI SEO Software"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["seo", "ai", "llm", "automation", "local-first", "nix", "fasthtml", "htmx", "agentic"]
dependencies = [
    "fasthtml>=0.6.9",
    "python-multipart>=0.0.6",
    "selenium>=4.11.2",
    "aiohttp>=3.8.0",
    "nest-asyncio>=1.5.6",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0"
]

[project.urls]
"Homepage" = "https://github.com/miklevin/pipulate/"
"Bug Tracker" = "https://github.com/miklevin/pipulate/issues"
"Documentation" = "https://pipulate.com/guide/"

# This creates the `pipulate` command
[project.scripts]
pipulate = "cli:main"

[tool.setuptools]
py-modules = ["cli", "server", "common", "config", "ai_dictdb", "__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "imports*", "tools*", "static*"]
exclude = [
    "logs*", 
    "data*", 
    "downloads*", 
    "scripts*", 
    "browser_automation*",
    "Notebooks*",
    ".venv*"
]

[tool.setuptools.package-data]
"*" = [
    "assets/installer/install.sh", 
    "flake.nix",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

